@@ -1,4 +1,4 @@
 format: 'full_html'
 name : ''
 mail: ''
-linkonly: 0
+linkonly: false
